Bug 1765898. Expose GetEncoderInfo() for out of tree encoders. r=bwc

The Qp thresholds are taken from h264_encoder_impl.cc

Adding a ScalingSettings for WebrtcGmpVideoEncoder will enable the quality
scaler for WebrtcGmpVideoEncoder which will fix the resolution not being
changed at low bitrates.

Differential Revision: https://phabricator.services.mozilla.com/D144485